--- a/src/app/component/single-comp/single-comp.component.html
+++ b/src/app/component/single-comp/single-comp.component.html
@@ -1,9 +1,12 @@
-<div class="card" [ngClass]="{ 'bg-success': art.completed }">
-  <p class="card-text" *ngIf="art.author">
+<div
+  class="card"
+  [ngClass]="{ 'bg-success': art.completed, 'color-dis': !art.completed }"
+>
+  <h2 class="card-text p-2 text-light text-center" *ngIf="art.author">
     Autore: {{ art.author.firstName }} {{ art.author.lastName }}
-  </p>
+  </h2>
   <div class="card-body">
-    <h5 class="card-title">{{ art.todo }}</h5>
+    <h5 class="card-title text-light text-center">{{ art.todo }}</h5>
 
     <input type="checkbox" [(ngModel)]="art.completed" />
   </div>
