--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col col col-12" *ngFor="let t of todoconautore">
+    <div class="col col-12 my-2" *ngFor="let t of todoconautore">
       <app-single-comp [art]="t"></app-single-comp>
     </div>
   </div>
@@ -9,6 +9,7 @@
 <!--
 
   vecchio post messo in home per prova
+  ora sto convertendo con single component
 
   div
         class="card"
