--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-nav></app-nav>
-<router-outlet></router-outlet>
+<body class="bg-dark">
+  <app-nav></app-nav>
+  <router-outlet></router-outlet>
+</body>
