--- a/src/app/pages/todofin/todofin.component.html
+++ b/src/app/pages/todofin/todofin.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col col-6 my-2" *ngFor="let t of todofin">
+  <div class="row row-cols-1 row-cols-md-2">
+    <div class="col my-2" *ngFor="let t of todofin">
       <app-single-comp [art]="t"></app-single-comp>
     </div>
   </div>
