--- a/src/app/pages/todouser/todouser.component.html
+++ b/src/app/pages/todouser/todouser.component.html
@@ -1,7 +1,7 @@
 <p>todouser works!</p>
 
 <div class="container">
-  <div class="row row-cols-4">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
     <div class="col my-3" *ngFor="let t of utenticontodo">
       <div class="card h-100 bg-black">
         <div class="card-body d-flex flex-column align-items-center">
